tests/agl/rejections/parse/named_arg_colon_ctor.agl
record R
  x: int
let r = R(x: 0)
print r.x
